# goat

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .pnp.cjs  .prettierrc.js  README.md  compose.yaml  conftest.py  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/processes/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  motia-workbench.json  motia.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  types.d.ts
apps/processes/scripts/: setup_print.sh  test_layer_delete.py  test_layer_import.py
apps/processes/src/analysis/: analysis-api.step.ts  get-job-api.step.ts  list_tools_api_step.py  log_analysis_result_step.py  log_job_status_step.py  ogc-conformance.step.ts  ogc-landing.step.ts  ogc_conformance_step.py  ogc_execute_step.py  ogc_job_dismiss_step.py  ogc_job_list_step.py  ogc_job_results_step.py  ogc_job_status_step.py  ogc_landing_step.py  ogc_process_description_step.py  ogc_process_list_step.py  openapi_step.py  process_analysis_step.py  swagger-ui.step.ts  swagger_ui_step.py
apps/processes/src/layer/: layer_delete_step.py  layer_export_step.py  layer_import_step.py  layer_update_step.py
apps/processes/src/lib/: auth.py  config.py  db.py  ducklake.py  job_schemas.py  job_state.py  layer_params_factory.py  paths.py  (+10 more)
apps/processes/tests/: __init__.py  conftest.py  test_analytics_registry.py  test_analytics_service.py  test_processes_models.py  test_tool_registry.py  test_windmill_client.py
apps/processes/workers/: Dockerfile  Dockerfile.windmill.dev  build-and-push.sh
(+736 files in other folders)
